@@ -1,9 +1,11 @@
 package iowritestring.school;
 
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
+import java.util.List;
 import java.util.Scanner;
 
 public class Diary {
@@ -13,6 +15,18 @@ public class Diary {
         String St = name + " " + rate;
 
         return St;
+    }
+
+    public void reader() {
+
+      Path file = Path.of("tanulo_neve.txt");
+      try {
+          String rate = Files.readString(file);
+          System.out.println(rate);
+      }
+catch (IOException i){
+          throw new IllegalStateException("Cant read the file", i);
+}
     }
 
 
@@ -29,10 +43,12 @@ public class Diary {
 
         Path file = Path.of("tanulo_neve.txt");
         try {
-            Files.writeString(file, name + " " + rate + " ", StandardOpenOption.APPEND);
+            Files.write(file, List.of(name + " " + rate + " "), StandardOpenOption.APPEND);
         } catch (IOException ioe) {
             throw new IllegalStateException("Can not write file", ioe);
         }
+
+        diary.reader();
 
     }
 }
